# Freedom250

./: .gitignore  README.md
backend/: .env.example  README.md  pyproject.toml
backend/app/: config.py  main.py  store.py
backend/app/data/: loaders.py  regulations.py  size_standards.py
backend/app/llm/: audit.py  checks.py  client.py  eval.py  prompts.py  schema.py
backend/app/routers/: applications.py  evals.py  regulations.py
backend/tests/: test_data_layer.py  test_health.py
data/: mock_applications.json  sba_borrower_risk_summary.csv  sba_transactions_flagged.csv  sba_transactions_mixed_review.csv  sba_transactions_not_flagged.csv  synthetic_sba_audit_transactions.csv  title-13-chapter-i.txt
data/financial_submission_examples/: 01_main_street_bakery_submission.csv  02_laredo_auto_repair_submission.csv  03_bluebonnet_medical_supply_submission.csv  04_coastal_event_rentals_submission.csv  README.md  index.csv
data/sba_business_examples/: 01_harborview_cafe_not_flagged.csv  02_lone_star_machine_not_flagged.csv  03_brightpath_clinic_flagged.csv  04_summit_event_rentals_flagged.csv  05_riverbend_market_review.csv  (+4 more)
dev-rag/: build_embeddings.py  build_regulation_vectors.py  build_sba_fraud_dataset.py  build_sba_vectors.py  document_records.py  download_relevant_regulations.py  download_sba_regulations.py  identify_positive_fraud_cases.py  qdrant_store.py  query_regulations.py  rag_chunks.py  regulation_sources.py  show_pipeline.py
docs/: BUILD_SPEC.md  DEMO_SCRIPT.md  PRD.md
frontend/: package-lock.json
outputs/: freedom250_public_benefits.pptx
(+13 files in other folders)
